--- a/lecture4/test.html
+++ b/lecture4/test.html
@@ -21,7 +21,7 @@
 
         console.log("for - of 구문");
         for(const num of arr){
-            console.log("for of 구문 -> "+num);
+            console.log("arr 배열 값 -> "+num);
         }
 
         console.log("while 구문");
@@ -31,9 +31,6 @@
             i ++;
         }
 
-        for(let i = 0; i < 5; i++)  {
-            console.log("*");
-        }
     </script>
 </body>
 </html>
